ER_A_Gimbal/MDK-ARM/.vscode/uv4.log
*** Using Compiler 'V6.16', folder: 'C:\NewJourney\Active\Fight\Services\Keil5\ARM\ARMCLANG\Bin'
Build target 'Team_HAL_Code_Frame'
assembling startup_stm32f427xx.s...
compiling can.c...
compiling main.c...
compiling gpio.c...
compiling rng.c...
compiling dma.c...
compiling iwdg.c...
../Src/freertos.c(120): error: use of undeclared identifier 'Can_Export_Data_t'
  osMessageQDef(CAN1_Receive, 32, Can_Export_Data_t);
                                  ^
../Src/freertos.c(124): error: use of undeclared identifier 'Can_Export_Data_t'
  osMessageQDef(CAN2_Receive, 32, Can_Export_Data_t);
                                  ^
../Src/freertos.c(128): error: use of undeclared identifier 'Can_Send_Data_t'
  osMessageQDef(CAN_Send, 32, Can_Send_Data_t);
                              ^
3 errors generated.
compiling freertos.c...
compiling tim.c...
compiling adc.c...
compiling spi.c...
compiling stm32f4xx_ll_adc.c...
compiling stm32f4xx_it.c...
compiling stm32f4xx_hal_timebase_tim.c...
compiling usart.c...
compiling stm32f4xx_hal_msp.c...
compiling stm32f4xx_hal_adc_ex.c...
compiling stm32f4xx_hal_adc.c...
compiling stm32f4xx_hal_flash_ramfunc.c...
compiling stm32f4xx_hal_gpio.c...
compiling stm32f4xx_hal_pwr_ex.c...
compiling stm32f4xx_hal_flash.c...
compiling stm32f4xx_hal_flash_ex.c...
compiling stm32f4xx_hal_rcc_ex.c...
compiling stm32f4xx_hal_pwr.c...
compiling stm32f4xx_hal_dma_ex.c...
compiling stm32f4xx_hal_rcc.c...
compiling stm32f4xx_hal_cortex.c...
compiling stm32f4xx_hal_dma.c...
compiling stm32f4xx_hal.c...
compiling croutine.c...
compiling stm32f4xx_hal_exti.c...
compiling event_groups.c...
compiling stm32f4xx_hal_iwdg.c...
compiling system_stm32f4xx.c...
compiling stm32f4xx_hal_rng.c...
compiling stm32f4xx_hal_can.c...
compiling stm32f4xx_hal_tim_ex.c...
compiling stm32f4xx_hal_uart.c...
compiling stm32f4xx_hal_spi.c...
compiling stm32f4xx_hal_tim.c...
compiling list.c...
compiling timers.c...
compiling heap_4.c...
compiling port.c...
compiling stream_buffer.c...
compiling queue.c...
compiling cmsis_os.c...
compiling tasks.c...
"Team_HAL_Code_Frame\Team_HAL_Code_Frame.axf" - 3 Error(s), 0 Warning(s).
Target not created.
Build Time Elapsed:  00:00:07
